<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fikret</string>
    <string name="play">Play</string>
    <string name="app_desc">A bird-rescue adventure</string>
    <string name="app_version">%1$s v%2$d</string>
    <string name="app_claims_ads_desc">No Ads</string>
    <string name="app_claims_background_tasks_desc">No Background Tasks</string>
    <string name="app_claims_offline_desc">Works Offline</string>
    <string name="app_claims_trackers_desc">No Trackers</string>

    <string name="license_gpl3" translatable="false">GPL 3.0</string>

    <string name="hud_label_hp">HP</string>
    <string name="hud_label_def">DEF</string>
    <string name="hud_label_atk">ATK</string>
    <string name="hud_label_mana">MANA</string>
    <string name="hud_label_lv">LEVEL</string>
    <string name="hud_label_coins">COINS</string>
    <string name="hud_label_exp">EXP</string>
    <string name="hud_stat_placeholder">--</string>

    <string name="hud_desc_menu">Main menu</string>
    <string name="hud_desc_expand">Expand HUD</string>
    <string name="hud_desc_collapse">Collapse HUD</string>
    <string name="hud_desc_sleep">Sleep</string>
    <string name="hud_desc_sonar">Sonar</string>
    <string name="hud_desc_heal">Heal</string>
    <string name="hud_desc_teleport">Teleport</string>
    <string name="hud_desc_teleport_home">Teleport home</string>
    <string name="hud_desc_magic">Magic</string>
    <string name="hud_desc_candle">Candle</string>
    <string name="hud_desc_diamond_skin">Diamond skin</string>
    <string name="hud_desc_thunder">Thunder</string>
    <string name="hud_desc_dive">Dive</string>
    <string name="diamond_skin_locked_in">Can\'t take off the diamond skin while swimming in it</string>
</resources>
